[FIX] fix being able to interact with an invisible dropdown menu

--- a/popup/styles/popup-styles.css
+++ b/popup/styles/popup-styles.css
@@ -279,7 +279,7 @@ body small a {
 }
 
 #container #menu-wrap .menu {
-    /* visibility: hidden; */
+    visibility: hidden;
     opacity: 0;
     position: absolute;
     right: -0px;
@@ -355,12 +355,14 @@ body small a {
 }
 
 #container #menu-wrap .toggler:checked~.menu {
+    visibility: visible;
     opacity: 1;
     transform: scale(1);
     transition: transform 100ms ease-out, opacity 100ms ease-out;
 }
 
 #container #menu-wrap .toggler:not(:checked)~.menu {
+    visibility: hidden;
     opacity: 0;
     transform: scale(.5);
     transition: transform 100ms ease-in, opacity 100ms ease-in;
